# chomikai

./: LICENSE  README.md  pyproject.toml
chomikai/: main.py
chomikai/auth/: __init__.py  auth.py
chomikai/dotenv/: __init__.py
chomikai/frontend/: login.html  presentations.html  progress.html
chomikai/internal/: __init__.py  dotenv.py
chomikai/mcp/: __init__.py  slides_tool.py
chomikai/routers/: __init__.py  auth.py
